# storage_delight_compass

./: .gitignore  CMakeLists.txt  resources.qrc  vcpkg.json
DelightUI/: App.qml  qmldir
DelightUI/Components/: Alert.qml  BaseButton.qml  Card.qml  FlatComboBox.qml  FlatSwitch.qml  InputBar.qml  Line.qml  SideButton.qml  StorageSoreAppend.qml  StorageSoreRemove.qml  TopBar.qml  qmldir
DelightUI/Pages/: BucketPage.qml  Console.qml  Groups.qml  Login.qml  Members.qml  ObjectBrowser.qml  ObjectPage.qml  Personal.qml  Register.qml  Terminal.qml  Welcome.qml  qmldir
src/: Main.qml  group_info.cpp  group_info.hpp  http_clint.cpp  http_clint.hpp  main.cpp  members_model.cpp  members_model.hpp  user_info.cpp  user_info.hpp  utils.hpp
src/Qml/Pages/: Register.qml  Welcome.qml
src/types/: buckets.cpp  buckets.hpp  group_list_model.cpp  group_list_model.hpp  group_model.cpp  group_model.hpp  object_model.cpp  object_model.hpp  response.hpp  result.hpp  storage_source.cpp  storage_source.hpp  storage_source_model.cpp  storage_source_model.hpp
